Modified domain model according to new swagger definition. Modified css of sidebar/bpmn io for improved embedding of the bpmn io editor Added fragment editor to interface Added scenario editor to interface Added sidebar to interface Configured routing for interface Added moaaaaaar packages
